# CplusplusAndroidTurtle

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/cplustyboy/cplusplustest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/WalletLegacy/: KeysStorage.h
app/src/main/cpp/crypto/: crypto.h
app/src/main/java/com/example/cplustyboy/cplusplustest/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/cplustyboy/cplusplustest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
